--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,14 @@
+bson==0.5.10
+Cerberus==1.3.4
 click==8.1.3
+dnspython==2.3.0
 Flask==2.2.2
 importlib-metadata==6.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
+pymongo==4.3.3
+python-dateutil==2.8.2
+six==1.16.0
 Werkzeug==2.2.2
 zipp==3.11.0
