--- a/requirements.txt
+++ b/requirements.txt
@@ -7,8 +7,10 @@ importlib-metadata==6.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
+PyJWT==2.6.0
 pymongo==4.3.3
 python-dateutil==2.8.2
+python-dotenv==0.21.1
 six==1.16.0
 Werkzeug==2.2.2
 zipp==3.11.0
